unpackaged/main/default/objects/D_a_de_Pedido__c/D_a_de_Pedido__c.object-meta.xml
<CustomObject>
    <label>Día de Pedido</label>
    <nameField>
        <displayFormat>DP-{00000000}</displayFormat>
        <label>Día de Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Días de Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>