unpackaged/main/default/objects/D_a_de_Pedido__c/fields/DPN__c.field-meta.xml
<CustomField>
    <fullName>DPN__c</fullName>
    <label>DPN</label>
    <referenceTo>DPN__c</referenceTo>
    <relationshipLabel>Días de Pedido</relationshipLabel>
    <relationshipName>D_as_de_Pedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>