unpackaged/main/default/objects/D_a_de_Pedido__c/fields/Hora_de_Fin__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Fin__c</fullName>
    <defaultValue>TIMEVALUE(&quot;16:00:00.000&quot;)</defaultValue>
    <label>Hora de Fin</label>
    <type>Time</type>
</CustomField>