unpackaged/main/default/objects/D_a_de_Pedido__c/fields/Hora_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Inicio__c</fullName>
    <defaultValue>TIMEVALUE(&quot;07:00:00.000&quot;)</defaultValue>
    <label>Hora de Inicio</label>
    <type>Time</type>
</CustomField>