unpackaged/main/default/objects/D_a_de_Pedido__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <label>Prioridad</label>
    <length>2</length>
    <type>Text</type>
</CustomField>